# blend

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/includes/: Shader.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/lr_close/: fsh.glsl  vsh.glsl
app/src/main/assets/lr_open/: fsh.glsl
app/src/main/assets/up_down_close/: fsh.glsl  vsh.glsl
app/src/main/assets/up_down_open/: fsh.glsl  vsh.glsl
app/src/main/cpp/: NativeBridge.cpp  RenderEngine.cpp  RenderEngine.h  function.h
app/src/main/java/com/example/blend/: JNILib.java  MainActivity.java  MyAdapter.java  MyBean.java  MyGLSurfaceView.java  MyRender.java  SelectActivity.java  TextureActivity.java
app/src/main/res/layout/: activity_main.xml  activity_select.xml  activity_show.xml  name_item.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
